# omoide

./: .coveragerc  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  feature-plan.md  manage.py  mypy.ini  pyproject.toml  roadmap.md  run_app.sh  run_downloader.sh  run_fs_operator.sh  run_worker.sh  run_worker_dev.sh  server_config.py
.github/workflows/: pythonapp.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2024_10_29_1040-3cd33ce04e6c_create_db_users.py  2024_10_29_1108-f9be6d5c70c5_create_user_roles.py  2024_10_29_1118-01c066d38f16_create_item_statuses.py  2024_10_29_1123-d8d98e088d34_create_users.py  2024_10_29_1127-91e06fe7de8d_create_known_tags.py  2024_10_29_1128-2bf410fe41c1_create_known_tags_anon.py  2024_10_29_1131-e65532acc2b2_create_registered_workers.py  2024_10_29_1133-ce3cd8b934bb_create_serial_lock.py  2024_10_29_1134-1b286a900ae0_create_serial_operations.py  2024_10_29_1139-55564454e156_create_items.py  2024_10_29_1141-316d326d0690_create_md5_and_crc32_signatures.py  2024_10_29_1143-8080725c8d7a_create_exif.py  2024_10_29_1144-8a834a50ca58_create_item_notes.py  2024_10_29_1147-bc2b88a10fed_create_computed_tags.py  2024_10_29_1152-25f007832aec_create_computed_metainfo.py  2024_10_29_1152-25f007832aec_create_metainfo.py  2024_10_29_1156-39ddf3e8fa1c_create_media.py  2024_10_30_1452-b637cad1a67c_redundant_uuids_for_items.py  2024_10_30_1501-d8231390e04b_fill_redundant_uuids_for_items.py  2024_10_30_2307-6974943d3a58_sequence_permissions.py  2024_10_31_1028-dfdb436852da_drop_indexes_for_redundant_uuids.py  2024_10_31_1321-de66fcce311e_more_rights_on_serial_operations.py  2024_11_01_2050-64ea36d4fac4_create_parallel_operations.py  2024_11_06_2220-75d07b1a7b39_added_copy_commands.py  2024_11_16_1948-b86f52f0bf00_added_problems.py  2024_11_16_2057-8870dd74f3df_allow_app_to_copy_items.py  2026_02_20_2156-d4d6001bb918_added_media_queues.py  2026_02_20_2206-b0ba5b2255db_added_media_queues.py  2026_03_04_2252-8ca57ddc101c_change_content_size_to_bigint.py  2026_06_18_2242-84e7c23cac48_added_parallel_command_queue.py  2026_07_07_2304-ffeecde84b84_sync.py
doc/: access.md  limitations.md  search.md
etc/ideas/: howto_search_1.md  howto_storage_1.md
etc/service/: omoide-downloader.service  omoide-fs-operator.service  omoide-worker.service  omoide.service
etc/systemd/: omoide-app.service  omoide-worker.service  omoide_app.service  omoide_worker_converter.service  omoide_worker_downloader.service  omoide_worker_parallel.service  omoide_worker_serial.service
omoide/: application.py  cfg.py  const.py  constants.py  custom_logging.py  dependencies.py  exceptions.py  limits.py  localization.py  models.py  operations.py  run_app.py  run_dev.py  serial_operations.py  utils.py
omoide/application/: app_models.py  raw_models.py  web.py
omoide/commands/: __init__.py  helpers.py
omoide/commands/change_password/: main.py  run.py
omoide/commands/common/: base_db.py  helpers.py
omoide/commands/compact_tags/: run.py
omoide/commands/create_user/: main.py  run.py
omoide/commands/du/: __init__.py  cfg.py  database.py  run.py  stats.py
omoide/commands/force_cover_copying/: run.py
omoide/commands/force_thumbnail_copying/: cfg.py  run.py
omoide/commands/move_metainfo_key/: run.py
omoide/commands/rebuild_computed_tags/: cfg.py  run.py
omoide/commands/rebuild_image_sizes/: cfg.py  run.py
omoide/commands/rebuild_known_tags/: run.py
omoide/commands/refresh_file_sizes_in_db/: cfg.py  run.py
omoide/commands/refresh_size/: __init__.py  main.py  run.py
omoide/commands/rename_metainfo_key/: run.py
omoide/commands/tree/: cfg.py  run.py
omoide/daemons/common/: action_class.py  base_db.py  meta_cfg.py  out.py  utils.py
omoide/daemons/downloader/: cfg.py  core.py  db.py  misc.py  run_forever.py  run_once.py
omoide/daemons/fs_operator/: core.py  fs_operations.py  misc.py  run_forever.py  run_once.py
omoide/daemons/worker/: README_RU.md  __main__.py  cfg.py  db.py  filesystem.py  interfaces.py  worker.py  worker_config.py
omoide/database/: db_models.py
omoide/database/interfaces/: __init__.py  abs_base.py  abs_browse_repo.py  abs_commands_repo.py  abs_database.py  abs_exif_repo.py  abs_items_repo.py  abs_items_repo2.py  abs_media_repo.py  abs_meta_repo.py  abs_misc_repo.py  abs_search_repo.py  abs_signatures_repo.py  abs_tags_repo.py  abs_users_repo.py  abs_users_repo2.py  abs_worker_repo.py
omoide/domain/: __init__.py  actions.py  aim.py  auth.py  browse.py  by_user.py  common.py  crud.py  dtos.py  ensure.py  errors.py  exceptions.py  models.py  preview.py  query.py  search.py  search_results.py  special_types.py  utils.py
omoide/domain/application/: app_constants.py  input_models.py  output_models.py
omoide/domain/core/: core_constants.py  core_models.py
omoide/infra/: __init__.py  authenticator.py  custom_logging.py  fs_locator.py  impl.py  locators.py  mediator.py  mediators.py  policy.py  special_types.py  web_locator.py
omoide/interfaces/: __init__.py  abs_authenticator.py  abs_locator.py  abs_policy.py
omoide/jobs/: __init__.py  job_config.py
omoide/omoide_api/: api_info.py  application.py  exception_handlers.py  exceptions.py
omoide/omoide_app/: application.py  exception_handlers.py
omoide/omoide_cli/: __main__.py  common.py  rebuild_computed_tags.py  rebuild_known_tags.py  utils.py
omoide/omoide_nginx/: application.py
omoide/omoide_worker/: __main__.py  database.py  filesystem.py  interfaces.py  runtime.py  worker.py  worker_config.py
omoide/presentation/: api_models.py  app.py  app_config.py  config.py  constants.py  dependencies.py  utils.py  web.py
omoide/storage/: asyncpg_storage.py  storage_models.py
omoide/tests/: conftest.py  constants.py  test_utils_for_tests.py  utils.py
omoide/use_cases/: __init__.py  abstract.py  auth.py  browse.py  by_user.py  create_item.py  home.py  preview.py  search.py  upload.py
omoide/worker/: __main__.py  database.py  filesystem.py  interfaces.py  runtime.py  worker.py  worker_config.py
omoide/workers/: README.md  child_init.py  utils.py
(+574 files in other folders)
