[tool.poetry]
name = "omoide"
version = "0.3.8"
description = "Image storing application"
authors = ["IgorZyktin <nicord@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.30.5"
Jinja2 = "^3.1.4"
python-multipart = "^0.0.6"
databases = "^0.7.0"
asyncpg = "^0.28.0"
bcrypt = "^4.2.0"
SQLAlchemy = "^1.4.53"
click = "^8.1.7"
ujson = "^5.10.0"
loguru = "^0.7.0"
gunicorn = "^21.2.0"
prettytable = "^3.10.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pydantic-core = "^2.20.1"
starlette = "^0.27.0"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
coverage = "^7.6.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.11.1"
sqlalchemy2-stubs = "^0.0.2-alpha.29"

[tool.poetry.group.dev.dependencies]
types-ujson = "^5.10.0.20240515"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy,sqlalchemy.ext.mypy.plugin"

[[tool.mypy.overrides]]
module = "omoide.tests.*"
ignore_errors = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    "pragma\\: no cover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

ignore_errors = true
